# gb-cam

./: README.md  setup.cfg  setup.py
src/: gb_camera.py
src/image_mask/: __init__.py  image_mask.py
