[metadata]
name = gb_cam
version = attr:bg_camera.__version__
author = Masato Kawamura
author_email = jp6uzv@gmail.com
description =
long_description = file:README.md
url = https://github.com/masato-ka/gb-camera
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    opencv-python

[options.entry_points]
console_scripts =
    gbcam = src.gb_camera:main
© 2020 GitHub, Inc.