[metadata]
name = gb_cam
version = alpha
author = Masato Kawamura
author_email = jp6uzv@gmail.com
description =
long_description = file:README.md
url = https://github.com/masato-ka/gb-camera
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    opencv-python

[options.extras_require]
osx =
    tflite_runtime @ https://dl.google.com/coral/python/tflite_runtime-2.1.0-cp37-cp37m-macosx_10_14_x86_64.whl

windows =
    tflite_runtime @ https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp37-cp37m-win_amd64.whl

linux =
    tflite_runtime @ https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp37-cp37m-linux_x86_64.whl

[options.entry_points]
console_scripts =
    gbcam = src.gb_camera:main
